--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,13 @@
 
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
-    background-color: lightslategray;
+    /* background-color: lightslategray; */
+    background-color: darkslategray;
     padding: 0 20px 20px 20px;
     max-width: 80%;
     margin-left: auto;
     margin-right: auto;
+    color: antiquewhite;
 }
 
 h1 {
@@ -28,7 +30,7 @@ img {
 }
 
 h1, h2, h3 {
-    color: navy
+    color: aquamarine;
 }
 
 ul {
@@ -41,4 +43,15 @@ ul, ol {
 
 li {
     padding-bottom: 8px;
+}
+
+a {
+    color: blanchedalmond;
+    text-decoration: none; 
+    padding: 8px;   
+}
+
+.hover-col:hover {
+    background-color: black;
+    border-radius: 8px;
 }
