Adjusts colours black edge, fixes main page links to fully clickable

--- a/index-styles.css
+++ b/index-styles.css
@@ -1,5 +1,5 @@
 ul {
-    margin-top: 50px;
+    margin-top: 25px;
     display: flex;
     justify-content: space-evenly;
     font-size: 32px;
@@ -15,6 +15,7 @@ li {
 a {
     color: white;
     text-decoration: none;
+    display: block;
 }
 
 .hover-col:hover {
