--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,18 @@
   Box-sizing: border-box;
 }
 
+html {
+    background-color: black;
+}
+
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
     /* background-color: lightslategray; */
     background-color: darkslategray;
-    padding: 0 20px 20px 20px;
+    padding: 10px 20px 20px 20px;
     max-width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    min-height: 100vh;
+    margin: 0 auto;
     color: antiquewhite;
 }
 
